# EDrive

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  README_CHINESE.md  requirements.txt
EROS/: .gitignore
ROS/: EROS.cc  EROS.h  ROS.cc
SelfDriving/: .cproject  .project
app/: EDrive.cc  EDrive.h
modules/src/common/adapters/: CMakeLists.txt  adapter.h  adapter_manager.cc  adapter_manager.h  message_adapters.h
modules/src/common/adapters/proto/: CMakeLists.txt  adapter_config.proto
modules/src/common/configs/: CMakeLists.txt  config_gflags.cc  config_gflags.h  vehicle_config_helper.cc  vehicle_config_helper.h
modules/src/common/configs/proto/: CMakeLists.txt  vehicle_config.proto
modules/src/common/filters/: CMakeLists.txt  digital_filter.cc  digital_filter.h  digital_filter_coefficients.cc  digital_filter_coefficients.h  mean_filter.cc  mean_filter.h
modules/src/common/math/: CMakeLists.txt  aabox2d.cc  aabox2d.h  aaboxkdtree2d.h  box2d.cc  box2d.h  cartesian_frenet_conversion.cc  euler_angles_zxy.h  line_segment2d.cc  line_segment2d.h  linear_interpolation.cc  linear_interpolation.h  linear_quadratic_regulator.cc  linear_quadratic_regulator.h  math_utils.cc  math_utils.h  mpc_osqp.cc  mpc_osqp.h  mpc_solver.cc  mpc_solver.h  polygon2d.cc  polygon2d.h  quaternion.h  vec2d.cc  vec2d.h
modules/src/common/math/qp_solver/: CMakeLists.txt  active_set_qp_solver.cc  active_set_qp_solver.h  qp_solver.cc  qp_solver.h  qp_solver_gflags.cc  qp_solver_gflags.h
modules/src/common/proto/: CMakeLists.txt  error_code.proto  geometry.proto  header.proto  pnc_point.proto
modules/src/common/src/adapters/: CMakeLists.txt  adapter.h  adapter_manager.cc  adapter_manager.h  message_adapters.h
modules/src/common/src/adapters/proto/: CMakeLists.txt  adapter_config.proto
modules/src/common/src/math/: CMakeLists.txt  cartesian_frenet_conversion.cc  cartesian_frenet_conversion.h  linear_quadratic_regulator.cc  linear_quadratic_regulator.h  math_utils.cc  math_utils.h  mpc_solver.cc  vec2d.cc  vec2d.h
modules/src/common/src/math/qp_solver/: active_set_qp_solver.cc  active_set_qp_solver.h  qp_solver.cc  qp_solver.h  qp_solver_gflags.cc
modules/src/common/util/: CMakeLists.txt  file.cc  file.h  map_util.h  string_tokenizer.cc  string_tokenizer.h  string_util.cc  string_util.h  util.cc  util.h
modules/src/common/vehicle_state/: CMakeLists.txt  vehicle_state_provider.cc  vehicle_state_provider.h
modules/src/common/vehicle_state/proto/: CMakeLists.txt  vehicle_state.proto
modules/src/control/: CMakeLists.txt  package.xml
modules/src/control/common/: CMakeLists.txt  control_gflags.cc  control_gflags.h  dependency_injector.h  interpolation_1d.cc  interpolation_1d.h  interpolation_2d.cc  interpolation_2d.h  leadlag_controller.cc  leadlag_controller.h  pid_controller.cc  pid_controller.h  trajectory_analyzer.cc  trajectory_analyzer.h
modules/src/control/conf/: adapter.conf  control.conf
modules/src/control/controller/: CMakeLists.txt  controller.h  controller_agent.cc  controller_agent.h  lat_controller.cc  lat_controller.h  lon_controller.cc  lon_controller.h  mpc_controller.cc  mpc_controller.h
modules/src/control/msg/: PathPoint.msg
modules/src/control/msg/lon_controller_conf/: FilterConf.msg  LonControllerConf.msg
modules/src/control/msg/pid_conf/: PidConf.msg
modules/src/control/proto/: CMakeLists.txt  calibration_table.proto  control_cmd.proto  control_conf.proto  gain_scheduler_conf.proto  lat_controller_conf.proto  leadlag_conf.proto  lon_controller_conf.proto  mpc_controller_conf.proto  mrac_conf.proto  pid_conf.proto
modules/src/control/src/: control.cc  control.h  main.cc
modules/src/control/src/common/: CMakeLists.txt  interpolation_2d.cc  pid_controller.cc  pid_controller.h  trajectory_analyzer.cc  trajectory_analyzer.h
modules/src/control/src/controller/: CMakeLists.txt  controller.h  controller_agent.cc  controller_agent.h  lat_controller.cc  lat_controller.h  lon_controller.cc  lon_controller.h  mpc_controller.cc  mpc_controller.h
modules/src/localization/proto/: CMakeLists.txt  localization.proto  localization_conf.proto  pose.proto  test.proto
modules/src/localization/src/common/: CMakeLists.txt  localization_gflags.cc  localization_gflags.h
modules/src/localization/src/map/: CMakeLists.txt  vector_map.cc  vector_map.h
modules/src/map/hdmap/: CMakeLists.txt  hdmap.cc  hdmap.h  hdmap_common.cc  hdmap_common.h  hdmap_impl.cc  hdmap_impl.h  hdmap_util.cc  hdmap_util.h
modules/src/map/hdmap/adapter/: CMakeLists.txt  coordinate_convert_tool.cc  coordinate_convert_tool.h  opendrive_adapter.cc  opendrive_adapter.h  proto_organizer.cc  proto_organizer.h
modules/src/map/hdmap/adapter/xml_parser/: common_define.h  header_xml_parser.cc  header_xml_parser.h  junctions_xml_parser.cc  junctions_xml_parser.h  lanes_xml_parser.cc  lanes_xml_parser.h  objects_xml_parser.cc  objects_xml_parser.h  roads_xml_parser.cc  roads_xml_parser.h  signals_xml_parser.cc  signals_xml_parser.h  status.h  util_xml_parser.cc  util_xml_parser.h
modules/src/routing/common/: CMakeLists.txt  routing_gflags.cc  routing_gflags.h
modules/src/routing/core/: CMakeLists.txt  black_list_range_generator.cc  black_list_range_generator.h  navigator.cc  navigator.h  result_generator.cc  result_generator.h
modules/src/routing/graph/: CMakeLists.txt  node_with_range.cc  node_with_range.h  range_utils.h  sub_topo_graph.cc  sub_topo_graph.h  topo_graph.cc  topo_graph.h  topo_node.cc  topo_node.h  topo_range.cc  topo_range.h  topo_range_manager.cc  topo_range_manager.h
modules/src/routing/strategy/: CMakeLists.txt  a_star_strategy.cc  a_star_strategy.h  strategy.h
modules/src/routing/topo_creator/: CMakeLists.txt  edge_creator.cc  edge_creator.h  graph_creator.cc  graph_creator.h  node_creator.cc  node_creator.h  topo_creator.cc
modules/src/viewer/proto/: CMakeLists.txt  viewer_conf.proto
modules/src/viewer/viewer_agent/: CMakeLists.txt  localization_agent.cc  localization_agent.h  perception_agent.cc  perception_agent.h  viewer_agent_base.h
tools/: git.bash  (+3 more)
(+282 files in other folders)
